    - Support for sessions folders in sessionmanagedialog.
    - Session name autocomplition only for sessions in current folder.
    - Support for sessions folders and commandline options "--session"
      and "--sessionid".
    - Disable sessions explorer "back" button if user sessions disabled.
    - Include <QDir> in sessionexplorer.cpp.
    - Remove deprecated workaround in wapi.cpp.

  [ Mike DePaulo ]
  * New upstream release (4.0.3.0):
    - Windows: Install VcXsrv "misc" fonts by default, and make all 4 font
      groups optional: misc, 75dpi, 100dpi and others (Fixes: #108)
      Note: The fact that all the fonts are included makes the installer about
      30MB larger.
    - Windows: Bundle new version of VcXsrv: 1.15.2.0-xp+vc2013+x2go1
      This new version is based on upstream VcXsrv 1.15.2.0, but still
      compatible with Windows XP. It is compiled with Microsoft Visual C++ 2013
      and contains 1 X2Go-specific change, winmultiwindow.patch. This patch
      fixes an issue when resizing the NX-proxy window on specific multiple
      monitor setups. (Thanks Oleksandr Shneyder for the patch)
      (Fixes: #568) (Fixes: #594)
    - Windows: Fix missing VcXsrv/zlib1.dll . The impact of this bug was that
      VcXsrv would not start if the cwd was changed from the x2goclient
      directory. (The start menu and desktop shortcuts do have the x2goclient
      directory as the cwd. So they were not affected.) (Fixes: #587)
    - Windows: Make the desktop shortcut optional during install,
      but still the default.
    - Windows: Upgrade libssh from 0.5.5 to 0.6.3. This fixes connecting to
      hpn-enabled SSH servers. The Pageant support patch from the KDE Windows
      project was ported to 0.6.3 by myself and Mike Frederick.
      (Gmail: psududemike) (Fixes: #590)
    - Windows: Win32 OpenSSL updated from 1.0.1h to 1.0.1i, which fixes the
      9 CVEs announced on 2014-08-06.