@@ -40,6 +40,7 @@ x2goclient (4.0.3.0-0x2go1) UNRELEASED; urgency=low
     - Disable sessions explorer "back" button if user sessions disabled.
     - Include <QDir> in sessionexplorer.cpp.
     - Remove deprecated workaround in wapi.cpp.
+    - Save folder icons Base64 coded. Save icons under General\icon_<PATH>.
 
   [ Mike DePaulo ]
   * New upstream release (4.0.3.0):
